# Tides-of-Manila

./: .gitignore  CMakeLists.txt  README.md
include/: console.h  prompts.h  text_graphics.h  trading.h  weather.h
libs/: CmakeLists.txt  console.c  prompts.c  text_graphics.c  trading.c  weather.c
src/: CmakeLists.txt  main.c
tests/: CmakeLists.txt  console_test.cpp  prompts_test.cpp  trading_test.cpp  weather_test.cpp
tests/mocks/: action-id.invalid.txt  bool.invalid.txt  cargo-id.invalid.txt  port-id.invalid.txt
